<resources>
    <string name="app_name">LocMess</string>

    <!--    Add Location Dialog     -->
    <string name="add_location_ok">Add Location</string>
    <string name="change_mules">Change Mules</string>
    <string name="cancel">Cancel</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="add_new_location">Add New Location</string>
    <string name="insert_location_name">Insert Location Name</string>
    <string name="add_location">Add location</string>
    <string name="location_name">Location Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here</string>
    <string name="list_nlocations">List Locations</string>
    <string name="create_locations">Create Locations</string>
    <string name="remove_locations">Remove Locations</string>
    <string name="post_message">Post Message</string>
    <string name="unpost_messages">Unpost Messages</string>
    <string name="post_date">Post date:</string>
    <string name="location">Location:</string>
    <string name="title">Title:</string>
    <string name="message">Message:</string>
    <string name="message2">message</string>
    <string name="title2">title</string>
    <string name="post_date2">post date</string>
    <string name="location2">location</string>
    <string name="username2">username</string>
    <string name="message_from">Message From:</string>
    <string name="message_caps">Message</string>
    <string name="title3">Title</string>
    <string name="blacklist_policy">- - - - - - - - - - - - - Blacklist Policy - - - - - - - - - - - - -</string>
    <string name="set_date">SET DATE</string>
    <string name="set_time">SET TIME</string>
    <string name="add_edit_key_pairs">Add/edit key pairs</string>
    <string name="textview">TextView</string>
    <string name="whitelist_policy">- - - - - - - - - - - - - Whitelist Policy - - - - - - - - - - - - -</string>
    <string name="number_of_mules">Number of mules</string>
    <string name="register">Register</string>
    <string name="radius_m">Radius (m)</string>
    <string name="select_ssid">Select SSID</string>
    <string name="add_ssid">Add SSID</string>
    <string name="logout">Logout</string>
    <string name="username3">Username:</string>
    <string name="add_key_pair">Add Key Pair</string>
    <string name="change_num_of_mules">Change num  of mules</string>
    <string name="pair">Pair</string>
    <string name="key">Key</string>
    <string name="add_pair">Add pair</string>
    <string name="insert_num_mules">Insert number of mules</string>
</resources>
