<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulisboa.tecnico.cmu.locmess.Activities.MessageActivity">

    <TextView
        android:id="@+id/tvPostDate"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/post_date"
        android:textSize="17dp"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tvLocation"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPostDate2"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tvLocation" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="106dp"
        android:layout_height="30dp"
        android:text="@string/location"
        android:textColor="#000000"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/tvLocation2"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/tvPostDate"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="9dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="9dp"
        tools:layout_editor_absoluteY="325dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="49dp"
        android:layout_height="27dp"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="17dp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMessage"
        android:layout_marginTop="55dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="134dp"
        android:layout_height="24dp"
        android:text="@string/message"
        android:textColor="#000000"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/tvLocation2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="98dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tvMessage2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="98dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvMessage2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/message2"
        android:textColor="#000000"
        android:textSize="17dp"
        android:background="@drawable/back"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
        android:layout_marginEnd="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:id="@+id/tvTitle2"
        android:layout_width="304dp"
        android:layout_height="27dp"
        android:text="@string/title2"
        android:textColor="#000000"
        android:textSize="17dp"
        tools:layout_editor_absoluteY="54dp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="13dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTitle"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/tvTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="13dp"
        tools:layout_editor_absoluteX="67dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvPostDate2"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:text="@string/post_date2"
        android:textColor="#000000"
        android:textSize="17dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/tvLocation2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="116dp"
        app:layout_constraintLeft_toLeftOf="@+id/tvLocation2" />

    <TextView
        android:id="@+id/tvLocation2"
        android:layout_width="243dp"
        android:layout_height="24dp"
        android:text="@string/location2"
        android:textColor="#000000"
        android:textSize="17dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/tvPostDate2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="21dp"
        android:layout_marginRight="16dp"
        tools:layout_editor_absoluteY="326dp"
        tools:layout_editor_absoluteX="125dp" />

    <TextView
        android:id="@+id/tvMessageFrom2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/username2"
        android:textColor="#000000"
        android:textSize="17dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMessageFrom"
        android:layout_marginEnd="9dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/tvMessageFrom"
        app:layout_constraintLeft_toRightOf="@+id/tvMessageFrom"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="9dp" />

    <TextView
        android:id="@+id/tvMessageFrom"
        android:layout_width="127dp"
        android:layout_height="25dp"
        android:text="@string/message_from"
        android:textColor="#000000"
        android:textSize="17dp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

</android.support.constraint.ConstraintLayout>
