<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulisboa.tecnico.cmu.locmess.Activities.RemovableItemListActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/etPair"
        android:layout_width="183dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/pair"
        android:layout_marginEnd="8dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/bAddPair"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp" />

    <AutoCompleteTextView
        android:id="@+id/acKey"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/key"
        android:layout_marginStart="6dp"
        app:layout_constraintRight_toLeftOf="@+id/etPair"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="6dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPair"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp" />

    <Button
        android:id="@+id/bAddPair"
        android:layout_width="107dp"
        android:layout_height="55dp"
        android:text="@string/add_pair"
        app:layout_constraintRight_toLeftOf="@+id/etPair"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="92dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etPair"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
