<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/title"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/add_new_location"
        android:textSize="@dimen/text_title_dialog"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">


        <EditText
            android:background="#FFFFFF"
            android:id="@+id/labelLocationName"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="none"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:text="Name"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/NewLocationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/insert_location_name"
            android:inputType="text|textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <EditText
            android:background="#FFFFFF"
            android:id="@+id/labelLatitude"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="insert_location_name"
            android:inputType="text|textPersonName"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/latitude"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:enabled="false"
            android:id="@+id/Latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <EditText
            android:background="#FFFFFF"
            android:id="@+id/labelLongitude"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/insert_location_name"
            android:inputType="text|textPersonName"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/longitude"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:enabled="false"
            android:id="@+id/Longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1.22"
            android:ems="10"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/labelRadius"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/insert_location_name"
            android:inputType="number"
            android:text="@string/radius_m"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/radius"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1.22"
            android:ems="10" />
    </LinearLayout>

</LinearLayout>