<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulisboa.tecnico.cmu.locmess.Activities.CreateLocationActivity">

    <Button
        android:id="@+id/bAddLocation"
        android:layout_width="@dimen/layout_width_create_location"
        android:layout_height="@dimen/layout_height_create_location"
        android:layout_marginTop="@dimen/layout_marginTop_create_location"
        android:text="@string/add_location"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etLocationName"
        android:layout_width="@dimen/layout_width_create_location2"
        android:layout_height="@dimen/layout_height_create_location2"
        android:layout_marginEnd="@dimen/layout_margin_create_location"
        android:layout_marginLeft="@dimen/layout_margin_create_location"
        android:layout_marginRight="@dimen/layout_margin_create_location"
        android:layout_marginStart="@dimen/layout_margin_create_location"
        android:layout_marginTop="@dimen/layout_marginTop_create_location2"
        android:ems="10"
        android:hint="@string/location_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etLatitude"
        android:layout_width="@dimen/layout_width_create_location2"
        android:layout_height="@dimen/layout_height_create_location2"
        android:layout_marginEnd="@dimen/layout_margin_create_location"
        android:layout_marginLeft="@dimen/layout_margin_create_location"
        android:layout_marginRight="@dimen/layout_margin_create_location"
        android:layout_marginStart="@dimen/layout_margin_create_location"
        android:layout_marginTop="@dimen/layout_marginTop_create_location3"
        android:ems="10"
        android:hint="@string/latitude"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etLongitude"
        android:layout_width="@dimen/layout_width_create_location2"
        android:layout_height="@dimen/layout_height_create_location2"
        android:layout_marginEnd="@dimen/layout_margin_create_location"
        android:layout_marginLeft="@dimen/layout_margin_create_location"
        android:layout_marginRight="@dimen/layout_margin_create_location"
        android:layout_marginStart="@dimen/layout_margin_create_location"
        android:layout_marginTop="@dimen/layout_marginTop_create_location4"
        android:ems="10"
        android:hint="@string/longitude"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etRadius"
        android:layout_width="@dimen/layout_width_create_location2"
        android:layout_height="@dimen/layout_height_create_location2"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Radius"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        android:layout_marginStart="@dimen/layout_margin_create_location"
        android:layout_marginEnd="@dimen/layout_margin_create_location"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="136dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/layout_margin_create_location"
        android:layout_marginRight="@dimen/layout_margin_create_location"
        app:layout_constraintHorizontal_bias="0.0" />


</android.support.constraint.ConstraintLayout>
